[package]
name = "tokio-stream-util"
version = "0.2.2"
edition = "2018"
authors = ["Adam Killam <adammkillam@gmail.com>"]
description = "Extension traits and utilities for tokio-stream's `Stream` trait."
license = "MIT"
repository = "https://github.com/amkillam/tokio-stream-util"
readme = "README.md"
keywords = ["tokio", "stream", "asynchronous", "async"]
categories = ["asynchronous", "network-programming", "data-structures"]
homepage = "https://github.com/amkillam/tokio-stream-util"
documentation = "https://docs.rs/tokio-stream-util"
rust-version = "1.45"

[features]
default = ["std", "alloc"]
std = [
  "futures-core/std",
  "async-sink/std",
  "futures-task/std",
  "either/use_std",
  "futures-util/std",
]
alloc = ["futures-core/alloc", "futures-task/alloc", "async-sink/alloc"]
sync = ["dep:tokio", "tokio-stream/sync", "async-sink/sync"]
portable-atomic = [
  "futures-core/portable-atomic",
  "futures-util/portable-atomic",
  "async-sink/portable-atomic",
]
cfg-target-has-atomic = [
  "futures-core/cfg-target-has-atomic",
  "futures-task/cfg-target-has-atomic",
  "futures-util/cfg-target-has-atomic",
  "async-sink/cfg-target-has-atomic",
]
sink = ["dep:async-sink"]
io = ["dep:tokio", "tokio-stream/io-util", "tokio/io-util"]

[dependencies]
tokio-stream = { version = "^0.1.17", default-features = false, features = [
  "io-util",
] }
tokio = { version = "^1.15.0", default-features = false, features = [
  "sync",
], optional = true }
futures-core = { version = "^0.3.31", default-features = false }
async-sink = { version = "0.1.0", default-features = false, optional = true }
either = { version = "^1.15.0", default-features = false }
futures-task = { version = "^0.3.31", default-features = false }
futures-util = { version = "^0.3.31", default-features = false }

[dev-dependencies]
tokio = { version = "^1.15.0", features = ["full"] }
